# mcp-agent-health

./: LICENSE  README.md
packaging/: README.md  agent_card.json  pyproject.toml
packaging/.mcp/: server.json
packaging/aos_health_mcp/: __init__.py  _scan_pure.py  call_logger.py  scanner.py  server.py
packaging/scripts/: g2_clean_install_smoke.py  smoke_self_call.py  sync_scan_pure.py
