[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-agent-health"
version = "0.3.1"
description = "MCP server to validate agent health under AOS discipline — catch agents that silently fail in production."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "AOS Standard" }]
keywords = ["mcp", "agent-health", "agent", "health", "validator", "compliance"]
dependencies = [
    "mcp>=1.0.0",
]

[project.scripts]
mcp-agent-health = "aos_health_mcp.server:main"

[project.urls]
Homepage = "https://github.com/aos-standard/mcp-agent-health"
Documentation = "https://github.com/aos-standard/mcp-agent-health#readme"
Repository = "https://github.com/aos-standard/mcp-agent-health"
Issues = "https://github.com/aos-standard/mcp-agent-health/issues"
Catalog = "https://raw.githubusercontent.com/aos-standard/catalog/main/catalog.json"
Agent-Card = "https://raw.githubusercontent.com/aos-standard/mcp-agent-health/main/packaging/agent_card.json"

[tool.setuptools.packages.find]
where = ["."]
include = ["aos_health_mcp*"]

[tool.setuptools.package-data]
aos_health_mcp = ["_scan_pure.py"]
